# pose_estimation_full_stack_project_2

./: .dockerignore  .env  .gitignore  Dockerfile  Dockerfile.frontend.prod  Dockerfile.prod  README.md  dev_mongodb_docker_start.sh  dev_run_backend_locally.sh  docker-compose.prod.yml  docker-compose.yml  frontend.Dockerfile  mongo-init.sh  prod_build_and_start_services.sh  prod_push_images.sh  pyproject.toml  pytest.ini
backend/: config.py  database_connection.py  file_handler.py  model_utils.py  pose_estimation_process.py  stats.py  tensor_utils.py  visualisation_utils.py  web_app.py
backend/configs/: development.json  unit_test.json
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js  BackendUrl.js  Navbar.jsx
frontend/src/components/: linechart.jsx  modal.jsx  numberdisplay.jsx  piechart.jsx  table.jsx  topitemsdisplay.jsx
frontend/src/pages/: Prediction.jsx  Results.jsx  Stats.jsx
tests/: test_prediction.py  test_visualisations.py  test_web_api.py  tests.ipynb
